WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238489
[iOS GPUProcess] Image decoding should not trigger IOSurface usage in the web process
https://bugs.webkit.org/show_bug.cgi?id=238489
Summary
[iOS GPUProcess] Image decoding should not trigger IOSurface usage in the web...
Simon Fraser (smfr)
Reported
2022-03-28 22:44:24 PDT
[iOS GPUProcess] Image decoding should not trigger IOSurface usa e in the web process
Attachments
Patch
(7.65 KB, patch)
2022-03-28 22:46 PDT
,
Simon Fraser (smfr)
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.56 KB, patch)
2022-03-28 22:50 PDT
,
Simon Fraser (smfr)
pvollan
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-03-28 22:46:52 PDT
Created
attachment 455995
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-03-28 22:46:56 PDT
<
rdar://problem/88717577
>
Simon Fraser (smfr)
Comment 3
2022-03-28 22:50:53 PDT
Created
attachment 455997
[details]
Patch
Per Arne Vollan
Comment 4
2022-03-29 08:55:11 PDT
Comment on
attachment 455997
[details]
Patch R=me.
Simon Fraser (smfr)
Comment 5
2022-03-29 10:05:52 PDT
https://trac.webkit.org/changeset/292035/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug