[iOS GPUProcess] Image decoding should not trigger IOSurface usage in the web process https://bugs.webkit.org/show_bug.cgi?id=238489 <rdar://88717577>

Reviewed by Per Arne Vollan.

Source/WebCore:

When hardwareAcceleratedDecodingDisabled() has been called, turn off hardware acceleration
for image decoding.

* platform/graphics/cg/ImageDecoderCG.cpp:
(WebCore::createImageSourceOptions):
(WebCore::ImageDecoderCG::disableHardwareAcceleratedDecoding):
(WebCore::ImageDecoderCG::hardwareAcceleratedDecodingDisabled):
* platform/graphics/cg/ImageDecoderCG.h:

Source/WebCore/PAL:

Expose kCGImageSourceUseHardwareAcceleration.

* pal/spi/cg/ImageIOSPI.h:

Source/WebKit:

When useGPUProcessForDOMRendering is true, disable hardware image decoding since
we need to avoid IOSurface access in the web process.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::setUseGPUProcessForDOMRendering):


Canonical link: https://commits.webkit.org/248978@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292035 268f45cc-cd09-0410-ab3c-d52691b4dbfc